[package]
name = "configfs"
version = "0.1.0"
authors = ["jD91mZM2 <me@krake.one>"]
edition = "2018"

[dependencies]
easyfuse = { git = "https://gitlab.com/jD91mZM2/easyfuse", rev = "705376759be3c2ed4e3f08ff1b0e333abeee8f80" }
env_logger = "0.7.1"
fuse = "0.3.1"
json5 = "0.2.5"
libc = "0.2.65"
log = "0.4.8"
serde_json = "1.0.41"
serde_yaml = "0.8.11"
structopt = "0.3.3"
time = "0.1.42"
toml = "0.5.5"
